--- a/style.css
+++ b/style.css
@@ -67,6 +67,15 @@
 .overflow{
     overflow-y: scroll;
 }
+
+.cta{
+    position: fixed;
+    left: 50px;
+    height: 70px;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: calc(100% - 50px);
+}
 footer{
     height: 100px;
     display: flex;
@@ -99,6 +108,25 @@ aside{
 .content-nav{
     margin-top: 80px;
 }
+
+.main-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-menu li{
+    list-style: none;
+    padding-right: 5px;
+    padding-top: 10px;
+}
+
+.main-menu a{
+    text-decoration: none;
+    padding-right: 5px;
+    color: gray;
+}
+
 
 
 /*Responsive*/
