--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@
 
 .debug .content-nav{
     background-color: blue;
-    height: 50px;
 }
 
 .debug .cover-list{
@@ -70,7 +69,7 @@
 
 .cta{
     position: fixed;
-    left: 50px;
+    
     height: 70px;
     top: 0;
     background-color: rgba(255, 255, 255, 0.4);
@@ -117,14 +116,36 @@ aside{
 
 .main-menu li{
     list-style: none;
-    padding-right: 5px;
-    padding-top: 10px;
+    padding: 10px 0;
 }
 
 .main-menu a{
     text-decoration: none;
-    padding-right: 5px;
+    
     color: gray;
+    padding-left: 15px;
+}
+
+.sidebar-list{
+    margin-top: 20px;
+    padding: 0 10px;
+}
+
+.sidebar-list li{
+    list-style: none;
+    padding: 5px 0;
+}
+
+
+.playlist{
+    margin-top: 30px;
+    padding: 0 10px;
+}
+
+.playlist-list li{
+    list-style: none;
+    padding: 8px 0;
+    
 }
 
 
@@ -151,6 +172,10 @@ aside{
 }
 
 @media screen and (min-width: 992px) {
+
+    .cover-list{
+        flex-wrap: nowrap;
+    }
     .cover-item{
         width: calc(100% / 6);
     }
