--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ footer{
     justify-content: space-between;
     align-items: center;
     padding: 0 5px;
+    z-index: 999;
 }
 
 main{
@@ -145,6 +146,7 @@ aside{
 .playlist-list li{
     list-style: none;
     padding: 8px 0;
+    
     
 }
 
