--- a/style.css
+++ b/style.css
@@ -22,9 +22,7 @@
     background-color: silver;
 }
 
-.debug .content-nav{
-    background-color: blue;
-}
+
 
 .debug .cover-list{
     border: dashed;
@@ -54,6 +52,11 @@
 }
 
 /* UTILITY */
+
+.text-white{
+    color: white;
+    font-weight: bold;
+}
 
 .d-flex{
     display: flex;
@@ -86,6 +89,7 @@ footer{
 
 main{
     height: calc(100vh - 100px);
+    overflow-y: hidden;
 }
 
 aside{
@@ -107,6 +111,7 @@ aside{
 
 .content-nav{
     margin-top: 80px;
+    background-color: rgb(20, 25,	34);
 }
 
 .main-menu {
@@ -127,6 +132,51 @@ aside{
     padding-left: 15px;
 }
 
+    /* Inizio sidebar*/
+
+
+.sidebar{
+    min-height: 600px;
+    overflow: hidden;
+}
+
+.sidebar-top{
+    height: calc(100% - 100px);
+    background-color: paleturquoise;
+}
+
+.sidebar-bottom{
+    height: 100px;
+    background-color: rgb(79, 83, 83);
+    display: flex;
+    align-items: flex-end;
+}
+.download .download-img{
+    display: flex;
+    flex-direction: column;
+}
+
+.download img {
+    height: 30px;
+    padding: 5px 10px;
+}
+
+.sidebar .sidebar-top{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.logo-phone img{
+    margin: 5px 5px;
+    height: 50px;
+}
+
+.logo-desk{
+    display: none;
+}
+
+
 .sidebar-list{
     margin-top: 20px;
     padding: 0 10px;
@@ -137,15 +187,38 @@ aside{
     padding: 5px 0;
 }
 
+.sidebar-list img{
+    height: 30px;
+    vertical-align: middle;
+}
+
+.sidebar-list a{
+    text-decoration: none;
+    display: inline-block;
+}
+
+ .label{
+    vertical-align: middle;
+    display: none;
+}
+
+    /* Fine sidebar*/
+
+
+
 
 .playlist{
     margin-top: 30px;
     padding: 0 10px;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .playlist-list li{
     list-style: none;
     padding: 8px 0;
+    color: gray;
     
     
 }
@@ -162,6 +235,11 @@ aside{
     .content{
         width: calc(100% - 200px);
     }
+
+    .sidebar-list .label{
+        vertical-align: middle;
+        display: inline-block;
+    }
     
   
 }
@@ -170,6 +248,11 @@ aside{
 @media screen and (min-width: 768px) {
     .cover-item{
         width: 25%;
+    }
+
+    .sidebar-list .label{
+        vertical-align: middle;
+        display: inline-block;
     }
   
 }
@@ -181,6 +264,11 @@ aside{
     }
     .cover-item{
         width: calc(100% / 6);
+    }
+
+    .sidebar-list .label{
+        vertical-align: middle;
+        display: inline-block;
     }
   
 }
