--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 550px;
 }
 
 /* DEBUG */
@@ -55,6 +56,18 @@ body{
 
 .d-flex{
     display: flex;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.justify-center{
+    justify-content: center;
 }
 
 .wrap{
@@ -109,9 +122,7 @@ body{
 
 footer{
     height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    
     padding: 0 5px;
     z-index: 999;
 }
@@ -289,6 +300,91 @@ aside{
 .cover-container .cover-img{
     width: 100%;
 }
+
+#player{
+    height: 100%;
+    align-items: center;
+}
+
+.footer-left{
+    width: 250px;
+}
+
+.footer-right{
+    width: 250px;
+}
+
+
+.footer-center{
+    width: 40%;
+}
+
+.player-album-icons{
+    width: 20%;
+}
+
+.player-album-cover{
+    width: 20%;
+}
+
+.player-album-cover img{
+    width: 100%;
+}
+
+.player-album-title{
+    width: 50%;
+}
+
+.player-control-button{
+    height: 60%;
+}
+
+.player-control-button i{
+    font-size: 25px;
+    margin: 0 10px;
+}
+
+#player .player-control-begin, #player .player-control-end{
+    text-align: center;
+    width: 10%;
+}
+
+.player-control-progress{
+    width: 80%;
+}
+
+
+.player-audio-percent{
+    width: 60%;
+}
+.slider{
+    height: 10px;
+    background-color: black;
+    border-radius: 5px;
+}
+
+.slider .percent{
+    width: 20%;
+    height: 100%;
+    background-color: green;
+    border-radius: 5px;
+    position: relative;
+
+}
+
+.slider .percent .current{
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    position: absolute;
+    right: 0;
+    top: -3px;
+    background-color: yellow;
+    display: none;
+
+}
+
+
 
 
 
