--- a/style.css
+++ b/style.css
@@ -94,8 +94,7 @@ body{
     
     height: 70px;
     top: 0;
-    background-color: rgba(255, 255, 255, 0.4);
-    width: calc(100% - 50px);
+    width: calc(100% - 100px);
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -107,7 +106,10 @@ body{
     padding: 10px;
     border-radius: 10px;
     text-decoration: none;
-    margin-right: 200px;
+}
+
+.button {
+    margin-right: 120px;
 }
 
 
@@ -129,7 +131,7 @@ main{
 }
 
 aside{
-    width: 25%;
+    width: 100px;
 }
 
 .content{
