--- a/style.css
+++ b/style.css
@@ -273,6 +273,18 @@ aside{
 
 .cover-container .cover-img{
     width: 100%;
+
+}
+
+.cover-container .cover-img:hover{
+    opacity: 0.5;
+    
+}
+.profile-img{
+    background-color: gray; 
+    border-radius: 10px; 
+    margin-right: 20px;
+
 }
 
 #player{
